# CINUX-new-repo

./: Makefile  README.md
kernel/: ext2fs.c  ext2fs.h  file.h  fs.c  icache.h  main.c  proc.c  syscall.c
mlibc/: cinux-riscv64.txt  log  meson.build  stubs.cpp  test.c
mlibc/sysdeps/cinux/: meson.build
mlibc/sysdeps/cinux/generic/: entry.cpp  syscalls.cpp
mlibc/sysdeps/cinux/include/: paths.h  utmp.h  utmpx.h
mlibc/sysdeps/cinux/include/bits/: dlfcn.h
mlibc/sysdeps/cinux/include/sys/: ioctl.h
user/: hello.c  init.c  printf.c  ulib.c  umalloc.c  usys.S
user/libc/: stdio.h  stdlib.h  string.h  unistd.h
user/libc/cinux/: syscalls.h
user/libc/sys/: stat.h  types.h
